# Foundry-Wiki-Tools

./: .gitignore  README.md  fetch_patch.py  pyproject.toml  rename_icons.py
foundry_parser/: __init__.py  __main__.py  cli.py  game_data.py  loader.py  lua_export.py  models.py  navbox_generator.py  page_generator.py  page_generator_standalone.py  preview.py  wiki_backup.py  wiki_diff.py  wiki_upload.py
lua_modules/: Achievements.lua  BlastFurnaceModes.lua  BuildingRecipeIndex.lua  Buildings.lua  CompanyRanks.lua  ConversionGroups.lua  CraftingTags.lua  Elements.lua  ExplorationUnlocks.lua  Industries.lua  InfoDatabase.lua  ItemBuildingIndex.lua  ItemCategories.lua  Items.lua  NameIndex.lua  OreVeins.lua  Quests.lua  RecipeBuildingNames.lua  RecipeCategories.lua  RecipeCraftingData.lua  RecipeIndex.lua  RecipeRowGroups.lua  Recipes.lua  Research.lua  ResearchIndex.lua  SkyPlatformUpgrades.lua  TerrainBlocks.lua  UpgradePaths.lua
wiki_modules/: Module_Achievements.lua  Module_Achievements_doc.wikitext  Module_Data_Buildings.lua  Module_Data_Buildings_doc.wikitext  Module_Infobox.lua  Module_Infobox_doc.wikitext  Module_ItemLink.lua  Module_ItemLink_doc.wikitext  Module_RecipeCard.lua  Module_RecipeCard_doc.wikitext  Module_RecipeTable.lua  Module_RecipeTable_doc.wikitext  TemplateStyles_Navbox.css  Template_Devblog.wikitext  Template_Devblog_doc.wikitext  Template_DevblogsNav.wikitext  Template_DevblogsNav_doc.wikitext  Template_History.wikitext  Template_History_doc.wikitext  Template_History_styles.css  Template_Infobox.wikitext  Template_Infobox_Building.wikitext  (+40 more)
