[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "foundry-wiki-tools"
version = "0.1.0"
description = "Parse Foundry game data and generate wiki content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
foundry-parser = "foundry_parser.cli:main"

[tool.setuptools.packages.find]
include = ["foundry_parser*"]
